--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ https://www.tooplate.com/view/2115-marvel
                         <h1 class="animated animated-text">
                             <span class="mr-2">Hey, I'm</span>
                                 <div class="animated-info">
-                                    <span class="animated-item">Frontend Developer</span>
                                     <span class="animated-item">Web Designer</span>
+                                    <span class="animated-item">Graphic Designer</span>
                                     <span class="animated-item">UI Specialist</span>
                                 </div>
                         </h1>
