--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ https://www.tooplate.com/view/2115-marvel
                             <span class="mr-2">Hey, I'm</span>
                                 <div class="animated-info">
                                     <span class="animated-item">Web Designer</span>
-                                    <span class="animated-item">Graphic Designer</span>
-                                    <span class="animated-item">UI Specialist</span>
+                                    <span class="animated-item">GUI Designer</span>
+                                
                                 </div>
                         </h1>
 
