--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ https://www.tooplate.com/view/2115-marvel
                                   <span>2024</span>
                              </div>
                              <div class="timeline-info">
-                                  <h3><span>Web Designer</span><small>Best Studio</small></h3>
+                                  <h3><span>Web Designer</span><small>(March 2022 - June 2024)</small></h3>
                                   <p> After left my previous Job I started my job in Gyan Sagar International school ( Delhi )  as a Web or Graphic Designer where i designed everyday new Graphic or maintain school website Daily  </p>
                              </div>
                         </div>
@@ -174,8 +174,8 @@ https://www.tooplate.com/view/2115-marvel
                                 <span>2016-2022</span>
                             </div>
                             <div class="timeline-info">
-                                <h3><span>Teacher (Computer Teacher)  <small>Crafted Co.</small></h3>
-                                <p>As a Computer Teacher, Me play a crucial role in equipping students with essential computer skills and fostering their interest and proficiency in technology at<b> Dev IT College Alwar. I Serve there as a Computer teacher since 2026- Arpil 2022 </b>. My dedication to teaching and preparing students for an increasingly digital world contributes significantly to their academic success and future career opportunities</p>
+                                <h3><span>Teacher (Computer Teacher)  <small>(May 2016 - Feb 2022)</small></h3>
+                                <p>As a Computer Teacher, Me play a crucial role in equipping students with essential computer skills and fostering their interest and proficiency in technology at<b> Dev IT College Alwar. I worked there as a Computer teacher since 2016- Arpil 2022 </b>. My dedication to teaching and preparing students for an increasingly digital world contributes significantly to their academic success and future career opportunities</p>
                             </div>
                         </div>
                        <div class="timeline-wrapper">
@@ -183,8 +183,8 @@ https://www.tooplate.com/view/2115-marvel
                                 <span>2015</span>
                             </div>
                             <div class="timeline-info">
-                                <h3><span>Freelancer</h3>
-                                <p> After completion My Education i started my carrier as a freelencer and grow my skills in IT Field where I l worked for my client they paid me an amount of work  </p>
+                                <h3><span>Freelancer <small> (July 2015 - March 2016) </small></h3>
+                                <p> After completion My Education i started my carrier as a freelencer and grow my skills in IT Field. where I worked for my client they paid me an amount of work  </p>
                             </div>
                         </div>
 
