--- a/index.html
+++ b/index.html
@@ -56,10 +56,7 @@ https://www.tooplate.com/view/2115-marvel
 
                 <ul class="navbar-nav ml-lg-auto">
                     <div class="ml-lg-4">
-                      <div class="color-mode d-lg-flex justify-content-center align-items-center">
-                        <i class="color-mode-icon"></i>
-                        Color mode
-                      </div>
+                      
                     </div>
                 </ul>
             </div>
@@ -78,7 +75,7 @@ https://www.tooplate.com/view/2115-marvel
                             <span class="mr-2">Hey, I'm</span>
                                 <div class="animated-info">
                                     <span class="animated-item">Web Designer</span>
-                                    <span class="animated-item">GUI Designer</span>
+                                    <span class="animated-item">UI Designer</span>
                                 
                                 </div>
                         </h1>
@@ -161,7 +158,7 @@ https://www.tooplate.com/view/2115-marvel
                              </div>
                              <div class="timeline-info">
                                   <h3><span>Web Designer</span><small>(March 2022 - June 2024)</small></h3>
-                                  <p> After left my previous Job I started my job in Gyan Sagar International school ( Delhi )  as a Web or Graphic Designer where i designed everyday new Graphic or maintain school website Daily  </p>
+                                  <p> After left my previous Job I started my job in <B></B> Gyan Sagar International school ( Delhi ) </B> as a Web or Graphic Designer where i designed everyday new Graphic or maintain school website Daily  </p>
                              </div>
                         </div>
 
@@ -174,8 +171,8 @@ https://www.tooplate.com/view/2115-marvel
                                 <span>2016-2022</span>
                             </div>
                             <div class="timeline-info">
-                                <h3><span>Teacher (Computer Teacher)  <small>(May 2016 - Feb 2022)</small></h3>
-                                <p>As a Computer Teacher, Me play a crucial role in equipping students with essential computer skills and fostering their interest and proficiency in technology at<b> Dev IT College Alwar. I worked there as a Computer teacher since 2016- Arpil 2022 </b>. My dedication to teaching and preparing students for an increasingly digital world contributes significantly to their academic success and future career opportunities</p>
+                                <h3><span>Teacher (Computer Teacher)  <small>(April 2016 - Feb 2022)</small></h3>
+                                <p>As a Computer Teacher, Me play a crucial role in equipping students with essential computer skills and fostering their interest and proficiency in technology at<b> Dev IT College Alwar. I worked there as a Computer teacher From April 2016- May 2022 </b>. My dedication to teaching and preparing students for an increasingly digital world contributes significantly to their academic success and future career opportunities</p>
                             </div>
                         </div>
                        <div class="timeline-wrapper">
@@ -220,7 +217,7 @@ https://www.tooplate.com/view/2115-marvel
                                 <span>2008</span>
                             </div>
                             <div class="timeline-info">
-                                <h3><span>Schooling</span><small>XII </small></h3>
+                                <h3><span>Schooling</span></h3>
                                 <p>I have completed my Schooling form Rajasthan Board in 2008 with the 1st Grade in arts Stream</p>
                             </div>
                         </div>
